2010-07-07  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps:  Add a default definition 
	    /g {setgray} def
	so that a missing palette initialization will result in normal 
	grayscale rather than an invalid PostScript file.
	Bug #3026477

2010-07-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (boundary3d): Prevent infinite loop or divide-by-zero
	if the requested plot is so small that x or y dimension goes to zero.
	Bug #3026145

2010-07-05  Akira Kakuto

	* term/win.trm:  More fixes to font initialization.
	Bug #2972307 #2993504

2010-07-02  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/win.trm:  Explicitly initialize font.
	Bug #2972307

2010-07-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): Regardless of the current timefmt
	setting, if we are reading time data from a binary file it will come in
	as a floating point value rather than as a string.  So we can treat it
	like any other binary value.
	Thanks to Thomas Sefzick for pointing this out.

	* src/datafile.c (df_readbinary): In binary mode, string-valued
	functions were silently ignored.  Fix this, thus allowing binary files
	to be plotted "with labels".  For example:
	plot 'foo' binary format='%double' using 0:1:("A") with labels

2010-06-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_key):  Accept "set key tc variable"

2010-06-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c src/gadgets.h src/graphics.c src/plot2d.c src/save.c
	src/set.c src/show.c src/tables.c src/tables.h src/unset.c
	docs/gnuplot.doc:

	New style element "set style circle radius <R>" specifies a default
	radius for function plots or 2-column data plots drawn "with circles".

2010-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Function plots should not be affected by
	the current setting of "boxwidth" unless they really do contain boxes.
	Bugfix
	